# agentic-rag

./: .env  dev.ipynb  helper.py  information_collector.py  opensearch_client.py  patent_analyzer_app.py  patent_crew.py  patent_search_tools.py  pyproject.toml
files/: patent_det.json  patents.json
results/: citation_0_0.json  citation_0_1.json  citation_1_0.json  citation_1_1.json  citation_3_0.json  citation_3_1.json  citation_3_2.json  citation_3_3.json  citation_3_4.json  citation_3_5.json  citation_3_6.json  citation_3_7.json  patent_data_0.json  patent_data_1.json  patent_data_2.json  patent_data_3.json
