[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.134.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.3",
    "opensearch-py>=3.0.0",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
]
